# osmmapmaker

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  index.html  install_dependencies.sh  install_dependencies_apt.sh  install_dependencies_vcpkg.bat  newsln.bat  notes.txt  osmmapmaker_tests.helgrind.supp  osmmapmaker_tests.memcheck.supp  project.xml  valgrind.supp  vcpkg-configuration.json  vcpkg-setup.bat  vcpkg.json
mapmaker/: CMakeLists.txt  applicationpreferences.cpp  applicationpreferences.h  batchtileoutput.cpp  batchtileoutput.h  datasource.cpp  datasource.h  demdata.cpp  demdata.h  imageoutput.cpp  imageoutput.h  linebreaking.cpp  linebreaking.h  mapmaker_resources.qrc  maputils.cpp  maputils.h  osmdata.cpp  osmdata.h  osmdatadirectdownload.cpp  osmdatadirectdownload.h  osmdatadownload.cpp  osmdatadownload.h  osmdataextractdownload.cpp  osmdataextractdownload.h  osmdatafile.cpp  osmdatafile.h  osmdatafilesource.cpp  osmdatafilesource.h  osmdataoverpass.cpp  osmdataoverpass.h  osmiumimporter.cpp  osmiumimporter.h  osmiumimporthandler.cpp  osmiumimporthandler.h  osmoverpasssource.cpp  osmoverpasssource.h  output.cpp  output.h  project.cpp  project.h  (+20 more)
mapmaker/resources/: areaKeys.json  project.xsd  render-0.sql  render-1.sql
mapmaker/resources/templates/: template_area.osmmap.xml  template_empty.osmmap.xml  template_point.osmmap.xml
osmmapmakerapp/: CMakeLists.txt  boundingboxdialog.cpp  boundingboxdialog.h  colorpickerdialog.cpp  colorpickerdialog.h  colorpickerdialog.ui  dataTab.cpp  dataTab.h  dataTab.ui  inputtypedialog.cpp  inputtypedialog.h  inputtypedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcanvas.cpp  mapcanvas.h  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  newtoplevelstyle.cpp  newtoplevelstyle.h  newtoplevelstyle.ui  outputTab.cpp  outputTab.h  outputTab.ui  outputtypedialog.cpp  outputtypedialog.h  outputtypedialog.ui  resources.qrc  selectvalueeditdialog.cpp  selectvalueeditdialog.h  selectvalueeditdialog.ui  styleTab.cpp  styleTab.h  styleTab.ui  subLayerTextPage.cpp  subLayerTextPage.h  subLayerTextPage.ui  (+4 more)
osmmapmakerapp/resources/: areas.txt  discarded.txt  render-1.sql
projects/: groton-sat.osmmap.xml  groton-trail.osmmap.xml  groton.osmmap.xml
projects/groton/: project.xml
tests/: CMakeLists.txt  applicationpreferences_test.cpp  area_test.cpp  batchtileoutput_test.cpp  coverage_report.txt  demdata_test.cpp  hello_test.cpp  imageoutput_test.cpp  label_test.cpp  labelpriority_test.cpp  line_test.cpp  linebreaking_test.cpp  maputils_test.cpp  new_project_test.cpp  osmdata_test.cpp  overpass_test.cpp  point_test.cpp  project_load_save_test.cpp  project_schema_test.cpp  projecttemplate_test.cpp  projecttest.cpp  projecttest.h  style_selector_test.cpp  stylelayer_test.cpp  sublayer_test.cpp  textfieldprocessor_test.cpp  textonpath_test.cpp  textsplittest.cpp  textsplittest.h  tileoutput_test.cpp
tests/dem/: simple.asc
tests/osm/: admin_boundary.osm  basic.osm  osm_test.xsd
tests/osm/render_cases/: case01.osm  case02.osm  case03.osm  case04.osm  case05.osm  case06.osm  case07.osm  case08.osm  case09.osm  case10.osm  case11.osm  case12.osm  case13.osm  case14.osm  case15.osm  case16.osm  case17.osm  case18.osm  case19.osm  case20.osm  case21.osm  case22.osm  case23.osm  case24.osm  case25.osm  case26.osm  case27.osm  case28.osm  case29.osm  case30.osm
tests/project_xml_samples/invalid/: invalid_bad_field_name.osmmap.xml  invalid_bad_root.osmmap.xml  invalid_bad_tileoutput_boolean.osmmap.xml  invalid_missing_layer_attribute.osmmap.xml  invalid_negative_zoom.osmmap.xml  invalid_no_map.osmmap.xml  invalid_two_geometry_tags.osmmap.xml
tests/project_xml_samples/malformed/: malformed_missing_lt.osmmap.xml
tests/project_xml_samples/valid/: valid_area.osmmap.xml  valid_image_output.osmmap.xml  valid_line.osmmap.xml  valid_overpass.osmmap.xml
tests/projects/invalid/: invalid-tileoutput.osmmap.xml  missing-datasource-name.osmmap.xml  missing-map.osmmap.xml
tests/projects/valid/: direct-download.osmmap.xml  extract-download.osmmap.xml  minimal-file.osmmap.xml
tools/: osm_to_svg.py
